
- BUGFIX: remove invalid ``label`` attribute from ``div`` in TEIConverter
- BUGFIX: Font extraction: create valid HTML in ``index.htm``
- BUGFIX: When parsing index.htm for font correction, do not eliminate
  spaces in replacement characters (fontenc.py)
- FEATURE: allow skipping of font extraction 
- FEATURE: allow output filename for ``anapdf``
- FEATURE: integrate pic number in index.htm

0.4.3 (2022-04-06)
==================

- FEATURE: detect possible smallcaps style from glyphname

0.4.2 (2021-03-09)
==================

- FEATURE: allow configuration of padding around
  a characters in font index

0.4.1 (2020-11-25)
==================

- BUGFIX: use BytesIO instead of SringIO as ``outfp``

0.4.0 (2020-01-28)
==================

- BUGFIX: write_font_index had unicode problems from porting
  to Python 2/3.
- BUGFIX: deal with missing fontmetrics information in font_index
- BUGFIX: deal with special characters (ampersands etc.) when
  writing font_index
- FEATURE: (experimental) allow for a default base font size to
  be specified at TEIConverter instantiation to determine relative
  font sizes (such as upper or lower case in pseudo-smallcaps)

0.3.1 (2019-12-18)
==================

- TEIConverter.add_style: The style dict relied on the
  simplestyle.Style objects as keys, but it is better to use
  the style ID.
- Some more fixes due to Python 2/3 port.

0.3.0 (2019-12-17)
==================

- Port to Python 2/3
- remove CSS code, use external package simplestyle instead

0.2.4 (2019-12-16)
==================

- BUGFIX: Unicode error in log message
- BUGFIX: ``get_wordsize`` does not return tuple when there are
  no sizes

0.2.3 (2019-09-09)
==================

- BUGFIX: program crashes when cropbox for single character has no
  horizontal or vertical extension
- added option -d, --debug to allow for more logging information
- changed requirements in setup.py: fitz is now PyMuPDF
  (somehow this change did not make it into the 0.2.2 release)
