@@ -12,6 +12,7 @@ Changelog for anapdf
 - FEATURE: allow skipping of font extraction 
 - FEATURE: allow output filename for ``anapdf``
 - FEATURE: integrate pic number in index.htm
+- FEATURE: allow for removal of soft hyphens
 
 0.4.3 (2022-04-06)
 ==================
